2004-07-30  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/{try_compile_anyfs,check_field}.m4: include
	<fs/msdosfs/msdosfsmount.h> if it exists.  Part of a set of
	FreeBSD 5 patches from Martin Blapp <mb@imp.ch>.

	* include/am_defs.h: include <fs/msdosfs/msdosfsmount.h> if it
	exists.

	* amd/ops_pcfs.c (mount_pcfs): set pcfs_args_t.dirmask field to
	0777 by default.

	* configure.in: check for pcfs_args_t.dirmask field.  Check for
	existence of <fs/msdosfs/msdosfsmount.h>, new on FreeBSD 5.

2004-07-29  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port: i386-pc-linux-fc2 (Fedora Core 2).

	* amd/info_ldap.c (amu_ldap_rebind): don't use ldap_enable_cache()
	unless the function exists in libldap and the extern is in
	<ldap.h>.  Recently, openldap removed the extern from ldap.h, but
	left the function in libldap, for binary compatibility; however
	ldap_enable_cache and related functions have been deprecated (and
	no longer listed in the header files), and therefore should be
	avoided.

	* m4/macros/check_extern_ldap.m4: new macro to check for
	LDAP-specific externs.  This is separate from check_extern.m4 so
	as to avoid breaking the general-purpose macro with LDAP-specific
	headers.

	* m4/macros/header_templates.m4: extern template for new
	HAVE_EXTERN_LDAP_ENABLE_CACHE.

	* configure.in: call new check_extern_ldap.m4 macro.

	* Makefile.am (EXTRA_DIST_M4): distribute new check_extern_ldap.m4
	macro.

	* config.guess.long: distinguish between redhat and fedora-core
	releases.

2004-07-23  Erez Zadok  <ezk@cs.sunysb.edu>

	* Minor new port i386-pc-linux-suse8.2: minor new port to SuSE
	8.2.  This systems' latest GCC (gcc version 3.3 20030226
	prerelease) correctly caught a lot of possibly bad comparisons
	between signed and unsigned quantities.

	* hlfsd/homedir.c (table_add, plt_search): changed first arg of
	both functions to u_int.

	* hlfsd/hlfsd.h, hlfsd/hlfsd.c: change 'cache_interval' to u_int.
	Changed proto for plt_search arg to u_int.
